Refactor - Services: Added progress service and moved some functionality to it

--- a/src/app/components/selection-menu/selection-menu.component.css
+++ b/src/app/components/selection-menu/selection-menu.component.css
@@ -13,7 +13,7 @@
 }
 
 .btn-complete {
-  border: 2px solid #A0FFA0 !important;
+  border: 2px solid #c0eddc !important;
   border-radius: 50px;
 }
 
