--- a/src/app/components/selection-menu/selection-menu.component.html
+++ b/src/app/components/selection-menu/selection-menu.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <app-side-menu [userEmail]="this.currentUser().email" [isOpen]="isMenuOpen" (logoutEvent)="logout()" (hideMenuEvent)="isMenuOpen = false"/>
 
-  <p-data-view #dv [value] = "this.contentList()" layout="grid">
+  <p-data-view #dv [value] = "this.temaList()" layout="grid">
     <ng-template #header>
       <div class="flex justify-start gap-2 items-center">
         <p-button routerLink="" severity="secondary" variant="text">
@@ -18,7 +18,7 @@
         </div>
       </div>
     </ng-template>
-    <ng-template #grid let-contentList>
+    <ng-template #grid let-temaList>
       <article>
         <!-- Description Modal -->
         <section>
@@ -60,73 +60,85 @@
             </div>
             <div class="gap-2 absolute bottom-8 right-8 w-full">
               <div class="flex justify-end gap-2">
-                <p-button severity="contrast" rounded="rounded" styleClass="w-8 h-8" (click)="descriptionVisible = false" >
+                <p-button severity="contrast" rounded="rounded" styleClass="w-8 h-8" (click)="gotToContent(selected.id)" [disabled]="disabled">
                   <i class="pi pi-arrow-right"></i>
                 </p-button>
               </div>
             </div>
           </p-dialog>
         </section>
-        <!-- Selection grid -->
-        <section >
+          <p-accordion [value]="['1','2','3','4']" multiple="true">
+            <section *ngFor="let tema of temaList">
+            <p-accordion-panel value="{{tema.id}}">
+              <p-accordion-header>
+                <h1>
+                  <span class="font-bold text-2xl">{{ "Tema " + tema.id + ": " }}</span>
+                  <span class="text-xl font-light">{{tema.title }}</span>
+                </h1>
+              </p-accordion-header>
+              <p-accordion-content>
+                <section class="grid grid-cols-12 gap-4 grid-nogutter">
+                  <div *ngFor="let contentID of tema.lessons" class="col-span-6 sm:col-span-6 md:col-span-4 xl:col-span-4 p-2">
+                    <div
+                      class="p-6 border border-surface-200 dark:border-surface-700 dark:bg-surface-900 rounded flex flex-col">
+                      <div class="flex justify-end items-center">
+                        @if (this.userProgress().progress[contentID - 1]){
+                          <div class="grow">
+                            <p-progress-bar [value]="this.userProgress().progress[contentID - 1]" color="#c0eddc"/>
+                          </div>
+                          @if(this.userProgress().progress[contentID - 1] === 10) {
+                            <div class="btn-complete">
+                              <p-button styleClass="w-8 h-8 rounded-xl cursor-none" severity="success" variant="text">
+                                <i class="pi pi-check"></i>
+                              </p-button>
+                            </div>
+                          }
+                          @else {
+                            <div class="btn-unlocked">
+                              <p-button styleClass="w-8 h-8 rounded-xl cursor-none" severity="secondary" variant="text">
+                                <i class="pi pi-lock-open"></i>
+                              </p-button>
+                            </div>
+                          }
+                        } @else {
+                          <div class="h-14"></div>
+                        }
+                      </div>
+                      <div class="flex justify-center rounded">
+                        <div class="relative mx-auto ">
+                          @if (this.userProgress().progress[contentID - 1]){
+                            <div class="relative-center text-blue-100 z-10 invisible hover:visible w-full">
+                              <i class="pi pi-play"></i>
+                            </div>
+                          }
+                          @else {
+                            <i class="pi pi-lock absolute-center z-10 text-white"></i>
+                          }
+                          <img (click)="gotToContent(contentID)"  class="rounded-xl xl:w-90 lg:w-70 md:w-50 sm:w-30 max-sm:w-20 transition-full ease-out delay-100 duration-150 {{ this.userProgress().progress[contentID - 1] ? 'hover:p-10 hover:drop-shadow-2xl hover:brightness-75 cursor-pointer': 'blur-sm brightness-60 saturate-0' }}"
+                               [src]="this.contentList()[contentID - 1].img" [alt]="'Imagen de ' + this.contentList()[contentID - 1].title" style="max-width: 600px" />
+                        </div>
+                      </div>
+                      <div class="pt-6">
+                        <div class="flex flex-col justify-between items-center products-start gap-1">
+                          <h1 class="font-medium text-surface-500 dark:text-surface-400 text-sm">{{ "Lección " + contentID }}</h1>
+                          <div class="w-full text-center">
+                            <h1 class="text-2xl mb-5 font-bold">{{ this.contentList()[contentID - 1].title }}</h1>
+                          </div>
+                          <div class="flex flex-row justify-center items-center self-center w-full ">
+                            <p-button (click)="descriptionVisible = true; selectedContent = contentID; disabled = this.userProgress().progress[contentID - 1] === undefined " outlined="true" severity="contrast" styleClass="text-xs">Más información</p-button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
 
-        </section>
-        <section class="grid grid-cols-12 gap-4 grid-nogutter">
-          <div *ngFor="let content of contentList" class="col-span-6 sm:col-span-6 md:col-span-4 xl:col-span-4 p-2">
-            <div
-              class="p-6 border border-surface-200 dark:border-surface-700 dark:bg-surface-900 rounded flex flex-col">
-              <div class="flex justify-end items-center">
-                @if (this.userProgress().progress[content.id - 1]){
-                  <div class="grow">
-                    <p-progress-bar [value]="this.userProgress().progress[content.id - 1] * 10" color="#A0FFA0"/>
-                  </div>
-                  @if(this.userProgress().progress[content.id - 1] === 10) {
-                    <div class="btn-complete">
-                      <p-button styleClass="w-8 h-8 rounded-xl cursor-none" severity="success" variant="text">
-                        <i class="pi pi-check"></i>
-                      </p-button>
-                    </div>
-                  }
-                  @else {
-                    <div class="btn-unlocked">
-                    <p-button styleClass="w-8 h-8 rounded-xl cursor-none" severity="secondary" variant="text">
-                      <i class="pi pi-lock-open"></i>
-                    </p-button>
-                    </div>
-                  }
-                } @else {
-                  <div class="h-14"></div>
-                }
-              </div>
-              <div class="flex justify-center rounded">
-                <div class="relative mx-auto ">
-                  @if (this.userProgress().progress[content.id - 1]){
-                    <div class="relative-center text-blue-100 z-10 invisible hover:visible w-full">
-                      <i class="pi pi-play"></i>
-                    </div>
-                  }
-                  @else {
-                    <i class="pi pi-lock absolute-center z-10 text-white"></i>
-                  }
-                  <img class="rounded-xl xl:w-90 lg:w-70 md:w-50 sm:w-30 max-sm:w-20 transition-full ease-out delay-100 duration-150 {{ this.userProgress().progress[content.id - 1] ? 'hover:p-10 hover:drop-shadow-2xl hover:brightness-75 cursor-pointer': 'blur-sm brightness-60 saturate-0' }}"
-                    [src]="content.img" [alt]="'Imagen de ' + content.title" style="max-width: 600px" />
-                </div>
-              </div>
-              <div class="pt-6">
-                <div class="flex flex-col justify-between items-center products-start gap-1">
-                  <h1 class="font-medium text-surface-500 dark:text-surface-400 text-sm">{{ "Lección " + content.id }}</h1>
-                  <div class="w-full text-center">
-                    <h1 class="text-2xl mb-5 font-bold">{{ content.title }}</h1>
-                  </div>
-                  <div class="flex flex-row justify-center items-center self-center w-full ">
-                    <p-button (click)="descriptionVisible = true; selectedContent = content.id" outlined="true" severity="contrast" styleClass="text-xs">Más información</p-button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+                </section>
 
-        </section>
+              </p-accordion-content>
+            </p-accordion-panel>
+            </section>
+          </p-accordion>
+
       </article>
     </ng-template>
   </p-data-view>
